@@ -27,7 +27,7 @@
 
 #ifndef lint
 static  char sccsid[] = "@(#)s_err.c	1.11 5/17/93 (C) 1992 Darren Reed";
-static char *rcs_version = "$Id: s_err.c,v 1.13 1999/01/30 18:07:33 db Exp $";
+static char *rcs_version = "$Id: s_err.c,v 1.14 1999/02/10 00:17:15 db Exp $";
 #endif
 
 static	char	numbuff[512];
@@ -239,9 +239,9 @@ static	char *	replies[] = {
 /* 200 RPL_TRACELINK, */	":%s 200 %s Link %s%s %s %s",
 /* 201 RPL_TRACECONNECTING, */	":%s 201 %s Try. %d %s",
 /* 202 RPL_TRACEHANDSHAKE, */	":%s 202 %s H.S. %d %s",
-/* 203 RPL_TRACEUNKNOWN, */	":%s 203 %s ???? %d %s %d",
-/* 204 RPL_TRACEOPERATOR, */	":%s 204 %s Oper %d %s %ld %ld",
-/* 205 RPL_TRACEUSER, */	":%s 205 %s User %d %s %ld %ld",
+/* 203 RPL_TRACEUNKNOWN, */	":%s 203 %s ???? %d %s (%s) %d",
+/* 204 RPL_TRACEOPERATOR, */	":%s 204 %s Oper %d %s (%s) %ld %ld",
+/* 205 RPL_TRACEUSER, */	":%s 205 %s User %d %s (%s) %ld %ld",
 /* 206 RPL_TRACESERVER, */	":%s 206 %s Serv %d %dS %dC %s %s!%s@%s %ld",
 /* 207 */	(char *)NULL,
 /* 208 RPL_TRACENEWTYPE, */	":%s 208 %s <newtype> 0 %s",
